# cuda-gaussian

./: CMakeLists.txt  gaussian_model.h  point_cloud.ply  setup.py  test.cu
cuda_rasterizer/: backward.cu  backward.h  forward.cu  rasterizer.h  rasterizer_impl.cu
